// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers courses should handle ADD_COURSE 1`] = `
Object {
  "100": Object {
    "description": "Test",
    "id": "100",
    "sections": Array [],
    "title": "Test",
  },
  "101": Object {
    "description": "Test",
    "id": "101",
    "sections": Array [],
    "title": "Test",
  },
}
`;

exports[`reducers courses should handle ADD_SECTION 1`] = `
Object {
  "100": Object {
    "description": "Test",
    "id": "100",
    "sections": Array [
      "201",
    ],
    "title": "Test",
  },
}
`;

exports[`reducers courses should handle REMOVE_COURSE 1`] = `
Object {
  "100": Object {
    "description": "Test",
    "id": "100",
    "sections": Array [],
    "title": "Test",
  },
}
`;
